--- a/src/common/scss/common.scss
+++ b/src/common/scss/common.scss
@@ -14,7 +14,8 @@ $headerTop:50px;
 .margT6{margin-top: 6px;}.margT8{margin-top: 8px;}.margT20{margin-top: 20px;}
 .margL20{margin-left: 20px;}.margL40{margin-left: 40px;}
 .margL100{margin-left: 100px;}.margL200{margin-left: 200px;}
-
+.blue{color: #409EFF;}
+.green{color: green;}
 .inline{
   display: inline-block;
 }
